testsuite/tests/partial-sigs/should_fail/WildcardInInstanceHead.stderr

WildcardInInstanceHead.hs:7:14: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in an instance declaration
